# pantheon

./: .gitignore  Cargo.toml  README.md
.ao/: IDENTITY.md  SOUL.md  config.yaml  sessions.db
design/: 0.1.0_FEATURE_MVP.md  0.2.0_FEATURE_CONTEXT.md  0.3.0_FEATURE_IDENTITY.md  ARCHITECTURE.md  DESIGN.md  FEATURES.md  FEATURE_TEMPLATE.md  IMPLEMENTATION.md
src/: agent.rs  chat.rs  cli.rs  config.rs  identity.rs  lib.rs  main.rs  tui.rs
src/provider/: mod.rs  openrouter.rs
src/session/: manager.rs  mod.rs  session.rs  store.rs
