[package]
name = "pantheon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
ratatui = { version = "0.26", features = ["default"] }
crossterm = "0.27"
